--- a/css/menu.css
+++ b/css/menu.css
@@ -14,7 +14,7 @@
   justify-content: center;
   cursor: pointer;
   z-index: 9999;
-  transition: 400ms ease-in-out 0;
+  transition: 400ms ease-in-out 0s;
 }
 
 .checkbox .trace {
@@ -55,7 +55,7 @@
   border-radius: 50%;
   box-shadow: 0px 0px 0px #fff;
   z-index: -1;
-  transition: 400ms ease-in-out;
+  transition: 400ms ease-in-out 0s;
 }
 
 .menu-items {
@@ -70,14 +70,14 @@
   z-index: 2;
   opacity: 0;
   visibility: hidden;
-  transition: 400ms ease-in-out 0;
+  transition: 400ms ease-in-out 0s;
 }
 
 .menu-items ul {
   list-style-type: none;
 }
 
-.menu-items ul li {
+.menu-items ul li a {
   margin: 10px 0;
   color: var(--color-one);
   text-decoration: none;
@@ -105,3 +105,16 @@
   top: 48px;
 }
 
+#toggle:checked + .checkbox {
+  background-color: white;
+}
+
+#toggle:checked ~ .menu {
+  box-shadow: 0px 0px 0px 100vmax white;
+  z-index: 1;
+}
+
+#toggle:checked ~ .menu-items {
+  visibility: visible;
+  opacity: 1;
+}
