config the responsive for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 @import 'menu.css';
 @import 'home.css';
 @import 'footer.css';
-@import 'reponsive.css';
+@import 'responsive.css';
 
 .header-wrapper {
   height: 100vh;
